force-app/main/default/objects/EvidenceArchive__c/EvidenceArchive__c.object-meta.xml
<CustomObject>
    <label>EvidenceArchive</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EvidenceArchive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EvidenceArchive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>