force-app/main/default/objects/EvidenceArchive__c/fields/ArchivedAt__c.field-meta.xml
<CustomField>
    <fullName>ArchivedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ArchivedAt</label>
    <type>DateTime</type>
</CustomField>