force-app/main/default/objects/EvidenceArchive__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle</label>
    <referenceTo>EvidenceBundle__c</referenceTo>
    <relationshipLabel>EvidenceArchive</relationshipLabel>
    <relationshipName>EvidenceArchive</relationshipName>
    <type>Lookup</type>
</CustomField>